k8s/apps/overlays/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - ../../base
  - virtualservice-test.yaml

nameSuffix: -test

commonLabels:
  env: test

patches:
  - path: patch-configmap.yaml
