k8s/apps/overlays/test/patch-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: helloworld
data:
  message: "hello from test environment"
